[project]
name = "testcontainers-envtest"
version = "0.1.0"
description = "Testcontainers module for envtest (Kubernetes API server + etcd) for testing Kubernetes controllers and operators"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Roman Hlushko", email = "roman.glushko.m@gmail.com" }
]
keywords = ["testcontainers", "kubernetes", "envtest", "testing", "operators", "controllers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.10"
dependencies = [
    "testcontainers>=4.0.0",
]

[project.optional-dependencies]
kubernetes = [
    "kubernetes>=29.0.0",
]

[project.urls]
Homepage = "https://github.com/roma-glushko/testcontainers-envtest"
Repository = "https://github.com/roma-glushko/testcontainers-envtest"
Documentation = "https://github.com/roma-glushko/testcontainers-envtest#readme"

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "kubernetes>=29.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "kubernetes>=29.0.0",
    "ruff>=0.8.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["testcontainers_envtest"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
